--- a/style.css
+++ b/style.css
@@ -103,23 +103,15 @@
   justify-content: center;
 }
 
-.capture-grid {
-  display: flex;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
 .capture-tiles {
   display: flex;
-  height: 45px;
-  width: 45px;
+  height: 50px;
+  width: 50px;
   border-width: 2px;
   font-size: 0.7rem;
   align-items: center;
   justify-content: center;
+  margin: 2px;
 }
 
 .clickedtile {
